fix: tweak padding to avoid scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,16 @@
   --color-warning: #f9e2af;
 }
 
+html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
   min-width: 320px;
-  min-height: 100vh;
   font-family: var(--font-family-sans);
   line-height: 1.5;
   font-weight: 400;
@@ -35,6 +41,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  height: 100%;
+  overflow: hidden;
 }
 
 h1,
